Changes between 2.0.0 and 2.1.0-git:
--------------------------------

3rd party libraries (contrib):
 * /extras/contrib has been replaced by a better system in /contrib

Audio output:
 * OpenBSD sndio audio output support

Encoders:
 * high10,high422 and high444 encoding support in h264

Audio Filters:
 * new remapping channel filter

Codecs:
 * Support for CDXL, Ut Video, VBLE, Dxtory codecs via libavcodec.

Video Filters:
 * new anaglyph video filter which transforms side by side 3D video streams in
   anaglyph glasses (aka red/blue) compatible images.

Interfaces:
 * fixed lua command line interface console mode under Windows.

Removed modules:
 * portaudio audio output

Changes between 1.1.13 and 2.0.0:
---------------------------------

Important notes:
 * The licenses of libVLC and libVLCcore have changed from GPLv2+ to LGPLv2.1+
 * Start/end titles/chapters are now specified with # rather than @ to fix
   conflicts with some URLs and file names. For instance, this plays a DVD
   from the 2nd chapter of the 1st title up to the 4th chapter of the 3rd
   title:  vlc dvd://#1:2-3:4
 * The 40+ --*-caching options were simplified and dumbed down to 4 options:
   - --file-caching specifies caching for local files,
   - --network-caching specifies caching for network resources,
   - --live-caching specifies caching for capture devices and
   - --disc-caching specifies caching for local optical media.
   All values are expressed in milliseconds as in previous versions.
 * HTTP server IP address, port, and TLS configuration is now centralized:
   - The --http-host option sets the address, e.g. "--http-host=[2001:db8::1]".
     By default, both :: and 0.0.0.0 are used.
   - The --http-port and --https-port options set the port numbers.
     By default, 8080 is used for HTTP, and 8443 for HTTPS.
   - The TLS credentials are configured with --http-cert (public certificate),
     --http-key (private key), --http-ca (optional CA) and
     --http-crl (optional CRL).